2010-10-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-query.lisp (query-print-string): Handle long lines
	correctly.

2010-10-27  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-expose-mode.lisp (expose-create-window): Ensure that
	all characters are printable.

2010-10-25  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/server/server.lisp: Load clfswm client code in the main
	program and let the user start it with a --client command line
	option.

	* src/package.lisp (*main-entrance-hook*): New hook executed after
	loading configuration file and before opening the display.

2010-10-23  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp: Remove unnecessary xlib:display-finish-output.

	* src/clfswm-internal.lisp (show-child): Show window only if not
	hidden.

	* src/clfswm-keys.lisp (binding-substitute-modifier): Utility to
	change modifiers after binding definition.

2010-10-21  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/osd.lisp: New file: OSD (On Screen Display) for
	presentations.

	* src/clfswm-menu.lisp (open-menu): Modularise function.

2010-10-13  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-info.lisp (show-first-aid-kit): Display the essential
	key binding in main and second mode.

2010-10-10  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (open-notify-window): Convert hello-window
	functions to a more generic Notify-window system.

	* src/tools.lisp (add-timer): Add an id to identify the timer.

2010-10-09  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/tools.lisp (erase-timer): New function.

	* src/clfswm-util.lisp (display-hello-window): Add a timer to hide
	the hello window. Add Configuration variables.

2010-10-08  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (): Add an Hello window at startup.

	* src/tools.lisp (process-timers): Add a timer system.
