@@ -7,8 +7,6 @@ URGENT PROBLEMS
 ===============
 Should handle these soon.
 
-- info mode: complet on [tab] without living the info mode.
-
 
 FOR THE NEXT RELEASE
 ====================
