@@ -1,3 +1,8 @@
+2010-10-31  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-query.lisp (query-mode-complet): New function: Handle
+	completion in query-mode.
+
 2010-10-30  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm-query.lisp (query-print-string): Handle long lines
